--- a/style/style.css
+++ b/style/style.css
@@ -52,11 +52,16 @@ body {
     background-color: #FFD200;
 }
 
-
-.titulo {
+.titulo-principal {
+    color:#333;
+    font-weight: bold;
+    text-align: center;
     font-size: 1.5rem;
     padding: 1rem;
     margin: 1rem;
+}
+
+.titulo {
     text-align: center;
 }
 
@@ -67,8 +72,6 @@ body {
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     background-color: #650094;
     padding: 1rem;
@@ -79,7 +82,9 @@ body {
 
 .card-container {
     display: flex;
-    justify-content: center; /* Centra los elementos horizontalmente */
+    justify-content: center; 
+    align-items: center;
+    flex-direction: column;
 }
 
 .card {
@@ -109,4 +114,60 @@ body {
 
 .card-info p {
     margin-bottom: 0;
+}
+
+.container-integrantes {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.card-integrantes {
+    width: 350px;
+    text-align: center;
+}
+
+.card-integrantes img {
+    width: 200px;
+    height: 300px;
+    object-fit: cover;
+}
+
+form {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    width: 100%;
+    margin: 5px 0;
+    padding: 5px;
+}
+
+input:focus {
+    outline: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+        input[type="number"]::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+.form-button {
+    align-self: center;
+    width: 90%;
+    background-color: #FFD200;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 30px 0;
+    font-weight: bold;
+}
+
+.form-button:hover {
+    background-color: #333;
+    color: #FFFFFF;
 }
